# TruthAnalizer

./: AnalyzeEventsTruth_module.cc  CMakeLists.txt  README.md  read_tree.C  scp.sh  tree_utils.cpp
Data/: analysis_output_truth_BNB_single_100_events.root  download_data.sh
LArSoft_code/: AnalyzeEventsTruth_module.cc  analysisConfigTruth.fcl  run_analyzeEvents_Truth.fcl  scp.sh  scp.sh~
